--- a/gallery.html
+++ b/gallery.html
@@ -18,14 +18,14 @@
  </style>
 </head>
 <body>
- <h1>Gallery of the Wild Atlantic Way</h1>
+ <h1>Gallery of Boston City</h1>
  <div>
- <img src="c:\Users\K00290685\Downloads\pexels-jaydenburdick-3397975.jpg" alt="Sample Image"
-1">
- <img src="c:\Users\K00290685\Downloads\pexels-rakim-davis-162539-539763.jpg" alt="Sample Image"
-2">
- <img src="c:\Users\K00290685\Downloads\pexels-jaydenburdick-3397975.jpg" alt="Sample Image"
-3">
+ <img src="c:\Users\K00290685\Downloads\pexels-jaydenburdick-3397975.jpg" height="200" width="300" alt="Sample Image"
+>
+ <img src="c:\Users\K00290685\Downloads\pexels-rakim-davis-162539-539763.jpg" height="200" width="300" alt="Sample Image"
+>
+ <img src="c:\Users\K00290685\Downloads\pexels-jaydenburdick-3397975.jpg" height="200" width="300" alt="Sample Image"
+>
  </div>
 </body>
 
